<resources>
    <string name="app_name">Gruntt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="comic_title">Title</string>
    <string name="comic_issue_count">Issue Count</string>
    <string name="title_activity_info_and_issue">InfoAndIssueActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_read_comic">ReadComicActivity</string>
    <string name="favorite_btn_add_to_favorites">Add to favorites</string>
    <string name="favorite_btn_remove_from_favorites">Remove from Favorites</string>
    
    <!--Image View-->
    <string name="imageView_comic_description">Comic Image Cover</string>

    <!--Favorite Comics Fragment-->
    <string name="favorite_comic_title">Title</string>
    <string name="favorite_comic_author">Author</string>
    <string name="favorite_comic_status">Status</string>

    <!--Nav menu items-->
    <string name="nav_drawer_all_comics">All Comics</string>
    <string name="nav_drawer_popular_comics">Popular Comics</string>
    <string name="nav_drawer_favorite_comics">My Comics</string>
    <string name="nav_drawer_contact">Contact</string>
    <string name="nav_drawer_search">Search</string>

    <!--Advanced Fragment Search Headers-->
    <string name="category_search">Search</string>
    <string name="category_genres">Genres</string>
    <string name="category_keyword">Keyword</string>
    <string name="category_status">Status</string>
    <!--Category Strings-->
    <string name="category_marvel">Marvel</string>
    <string name="category_adventure">Adventure</string>
    <string name="category_drama">Drama</string>
    <string name="category_horror">Horror</string>
    <string name="category_military">Military</string>
    <string name="category_robots">Robots</string>
    <string name="category_supernatural">Supernatural</string>
    <string name="category_dc_comics">DC Comics</string>
    <string name="category_comedy">Comedy</string>
    <string name="category_fantasy">Fantasy</string>
    <string name="category_magic">Magic</string>
    <string name="category_movie_cinematic_link">Movie Cinematic Link</string>
    <string name="category_romance">Romance</string>
    <string name="category_suspense">Suspense</string>
    <string name="category_vertigo">Vertigo</string>
    <string name="category_crime">Crime</string>
    <string name="category_gore">Gore</string>
    <string name="category_martial_arts">Martial Arts</string>
    <string name="category_mystery">Mystery</string>
    <string name="category_science_fiction">Science Fiction</string>
    <string name="category_tragedy">Tragedy</string>
    <string name="category_dark_horse">Dark Horse</string>
    <string name="category_cyborgs">Cyborgs</string>
    <string name="category_graphic_novels">Graphics Novels</string>
    <string name="category_mature">Mature</string>
    <string name="category_mythology">Mythology</string>
    <string name="category_sports">Sports</string>
    <string name="category_action">Action</string>
    <string name="category_demons">Demons</string>
    <string name="category_historical">Historical</string>
    <string name="category_mecha">Mecha</string>
    <string name="category_psychological">Psychological</string>
    <string name="category_spy">Spy</string>

    <!--Radio Button Strings-->
    <string name="radio_button_all">All</string>
    <string name="radio_button_ongoing">Ongoing</string>
    <string name="radio_button_complete">Complete</string>

    <!--Search Menu Buttons-->
    <string name="search_fragment_submit">Search</string>
    <string name="search_fragment_reset">Reset</string>
</resources>
