<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favorite_fragment_card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/subcategory_background"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:contentDescription="@string/imageView_comic_description"
            android:id="@+id/imageView_favorite_comic_image"
            android:adjustViewBounds="true"
            android:layout_width="@dimen/imageView_width_large_use"
            android:layout_height="@dimen/imageView_height_large_use"
            android:scaleType="fitXY"
            />

        <TextView
            android:id="@+id/textView_favorite_comic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/favorite_comic_title"
            android:maxLines="1"
            android:paddingTop="@dimen/card_top_text_padding"
            android:paddingStart="@dimen/card_start_text_padding"
            android:paddingEnd="@dimen/card_start_text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            />

        <TextView
            android:id="@+id/textView_favorite_comic_author"
            android:layout_width="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="@dimen/card_start_text_padding"
            android:paddingEnd="@dimen/card_start_text_padding"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/favorite_comic_author"
            />

        <TextView
            android:id="@+id/textView_favorite_comic_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/card_start_text_padding"
            android:paddingEnd="@dimen/card_start_text_padding"
            android:paddingBottom="@dimen/card_bottom_text_padding"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/favorite_comic_status"
            android:textAppearance="?attr/textAppearanceListItem"
            />

    </LinearLayout>
</android.support.v7.widget.CardView>